Core part works, also added Main for demonstration